--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,43 @@
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  text-align: center;
+  margin: 20px;
+  color: #fff;
+}
+
+.title::after {
+  content: "";
+  display: block;
+  margin: 10px auto;
+  width: 50%;
+  height: 3px;
+  background-color: #4caf50;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+body {
+  background-color: #181818;
+}
+
 .maze {
   display: flex;
   flex-direction: column;
+  padding: 10px;
+  background-color: #181818;
+  border-radius: 10px;
+  margin: auto;
 }
 
 .row {
@@ -11,21 +48,28 @@
 .cell {
   width: 20px;
   height: 20px;
+  border-radius: 5px; /* Making cells round */
 }
 
 .cell.wall {
-  background-color: black;
+  background-color: #383838; /* Lighter shade of gray for walls */
 }
 
 .cell.path {
-  background-color: white;
+  background-color: #181818; /* Same as body background color */
 }
 
 .cell.player {
-  background-color: blue;
+  background-color: #4caf50; /* Google Snake game green color */
   transition: transform 0.2s;
+  border-radius: 10px; /* More round shape for player */
 }
 
 .cell.checkpoint {
-  background-color: red;
+  background-color: #2196f3; /* Google Snake game blue color */
+  border-radius: 10px; /* More round shape for checkpoint */
+}
+
+.cell.quiz {
+  background-color: #9c27b0; /* Purple color */
 }
