--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100vh;
 }
 
 .title {
   text-align: center;
   margin: 20px;
   color: #fff;
+  font-size: 35px;
 }
 
 .title::after {
@@ -18,6 +20,12 @@
   width: 50%;
   height: 3px;
   background-color: #4caf50;
+  transition: width 0.5s;
+}
+
+.title:hover::after {
+  width: 100%;
+  transition: width 0.5s;
 }
 
 .content {
@@ -70,6 +78,45 @@ body {
   border-radius: 10px; /* More round shape for checkpoint */
 }
 
+.cell.gate {
+  background-color: #ab2c2c;
+  width: 8px;
+  margin-left: auto;
+  border-radius: 3px;
+}
+
 .cell.quiz {
-  background-color: #9c27b0; /* Purple color */
+  background-color: #9f32c3; /* Purple color */
+}
+
+p
+{
+  color: #fff;
+  font-size: 20px;
+}
+
+button {
+  background-color: #282828;
+  color: #fff;
+  border: none;
+  width: 100px;
+  height: 50px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  font-size: 20px;
+  text-align: center;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+button:hover {
+  background-color: #383838;
+}
+
+.instructionsContainer
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
