--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,7 @@ button {
   text-align: center;
   cursor: pointer;
   transition: background 0.3s;
+  margin-bottom: 80px;
 }
 
 button:hover {
@@ -119,4 +120,18 @@ button:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.directions
+{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #383838;
+  padding: 10px;
+  min-width: 500px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  margin-top: 5px;
 }
