--- a/src/components/Quiz.module.css
+++ b/src/components/Quiz.module.css
@@ -1,10 +1,7 @@
 .form {
     background-color: #383838;
     color: #fff;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 20px;
-    padding-bottom: 40px;
+    padding: 20px;
     border-radius: 10px;
     width: 500px;
     margin: 50px auto;
@@ -19,12 +16,10 @@ h2 {
     background-color: #282828;
     color: #fff;
     border: none;
+    padding: 10px;
     width: 100%;
-    height: 50px;
     margin-bottom: 20px;
     border-radius: 5px;
-    font-size: 20px;
-    text-align: center;
 }
 
 .submit {
@@ -32,15 +27,14 @@ h2 {
     color: #fff;
     border: none;
     padding: 10px;
-    width: 30%;
-    font-size: 15px;
+    width: 100%;
     cursor: pointer;
     transition: background 0.3s;
     border-radius: 5px;
 }
 
 .submit:hover {
-    background-color: #377e3b;
+    background-color: #45a049;
 }
 
 p {
